New strings and fixed abort action for cancel button

--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -37,6 +37,12 @@
     <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Roghnaigh cuntais a cheadú</string>
     <string name="menu_tutorial">Tutorial</string>
+    <string name="menu_exclude">Exclude</string>
+    <string name="menu_close">Close</string>
+    <string name="menu_choose">Choose</string>
+    <string name="msg_abort">Aborting</string>
+    <string name="msg_export">Backup all settings to %s</string>
+    <string name="msg_import">Import settings from %s</string>
     <string name="msg_new">Nua</string>
     <string name="msg_update">Nuashonrú</string>
     <string name="msg_licensed" formatted="false">Ceadúnaithe do: %s</string>
