--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -37,6 +37,12 @@
     <string name="menu_applications">Válassza ki az engedélyezendő alkalmazásokat</string>
     <string name="menu_contacts">Válassza ki az engedélyezendő névjegyeket</string>
     <string name="menu_tutorial">Útmutató</string>
+    <string name="menu_exclude">Exclude</string>
+    <string name="menu_close">Close</string>
+    <string name="menu_choose">Choose</string>
+    <string name="msg_abort">Aborting</string>
+    <string name="msg_export">Backup all settings to %s</string>
+    <string name="msg_import">Import settings from %s</string>
     <string name="msg_new">Új</string>
     <string name="msg_update">Frissítés</string>
     <string name="msg_licensed" formatted="false">Licensz tulajdonos: %s</string>
