--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -37,6 +37,12 @@
     <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
     <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
     <string name="menu_tutorial">تعليمي</string>
+    <string name="menu_exclude">Exclude</string>
+    <string name="menu_close">Close</string>
+    <string name="menu_choose">Choose</string>
+    <string name="msg_abort">Aborting</string>
+    <string name="msg_export">Backup all settings to %s</string>
+    <string name="msg_import">Import settings from %s</string>
     <string name="msg_new">جديد</string>
     <string name="msg_update">تحديث</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
