--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -53,6 +53,7 @@
     <string name="msg_random_now">عشوائي</string>
     <string name="msg_random_access">عشوائية الوصول</string>
     <string name="msg_random_boot">عشوائي بعد الإقلاع</string>
+    <string name="msg_restart">التطبيق يتطلب إعادة التشغيل</string>
     <string name="msg_first"><b>بُذلت عناية كبيرة لتطوير وإختبار XPrivacy,
 ومع ذلك فإنه من المستحيل ضمان أنه سيعمل خالياً من العيوب على كل جهاز ولكل تطبيق.
 \n\nالإستخدام على مسئوليتك الخاصة.</b>\n\nراجع أيضاً الترخيص:</string>
