--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="msg_random_now">Randomize now</string>
     <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Randomize on boot</string>
+    <string name="msg_restart">Restart required</string>
     <string name="msg_register" translatable="false">Register device</string>
     <string name="msg_registered" translatable="false">Check your e-mail to activate your device</string>
     <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
