--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -54,6 +54,11 @@
     <string name="msg_random_access">Inventar al acceder</string>
     <string name="msg_random_boot">Inventar en el arranque</string>
     <string name="msg_restart">Reinicio de aplicación requerido</string>
+    <string name="msg_register">Please register your device</string>
+    <string name="msg_registered">Check your e-mail to activate your device</string>
+    <string name="msg_migrating" formatted="false">Migrating %s</string>
+    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
+    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_first"><b>Se ha puesto mucho cuidado en el desarrollo y pruebas de XPrivacy,
 sin embargo no puedo garantizar que funcione sin ningún fallo para cada dispositivo y aplicación.
 \n\nÚselo bajo su responsabilidad.</b>\n\nVéase también el permiso:</string>
