--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -54,6 +54,11 @@
     <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Satunnaista uudelleenkäynnistyksen jälkeen</string>
     <string name="msg_restart">Application restart required</string>
+    <string name="msg_register">Please register your device</string>
+    <string name="msg_registered">Check your e-mail to activate your device</string>
+    <string name="msg_migrating" formatted="false">Migrating %s</string>
+    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
+    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_first"><b>Xprivacy on tehty ja testattu huolellisesti, mutta on kuitenkin mahdotonta antaa takeita että se toimii virheettömästi kaikissa laitteissa ja jokaisessa applikaatiossa.
 \n\nKäyttö on täysin omalla vastuullasi.</b>\n\nKatso myös lisenssi:</string>
     <string name="restrict_accounts">Tilit (Google, Facebook, jne)</string>
