--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -54,6 +54,11 @@
     <string name="msg_random_access">Випадкові значення при запиті</string>
     <string name="msg_random_boot">Випадкові значення після перезавантаження</string>
     <string name="msg_restart">Необхідне перезавантаження</string>
+    <string name="msg_register">Please register your device</string>
+    <string name="msg_registered">Check your e-mail to activate your device</string>
+    <string name="msg_migrating" formatted="false">Migrating %s</string>
+    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
+    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_first"><b>Велика увага була приділена розробці та тестуванню XPrivacy, 
 але не можна гарантувати, що вона буде працювати бездоганно на всіх пристроях та зі всімома програмами.
 \n\nВикористовуйте виключно на свій страх та ризик.</b>\n\nДив. також ліцензію:</string>
